SERVER-86870: Use safer method to check gFeatureFlagUpdateOneWithoutShardKey feature flag. (#19151)

GitOrigin-RevId: 6a34c8320639a7e2687c795d88b63f4d082de12f